<resources>

    <string name="app_name">Mzn</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="channel_name">Order status</string>
    <string name="channel_description">Notification of order status</string>
    <string name="currency_name">" AED"</string>
    <string name="price">"price: "</string>
    <string name="category">Category:</string>
    <string name="menu_my_orders">MyOrders</string>
    <string name="menu_settings">Settings</string>
    <string name="sizes">Sizes:</string>
    <string name="order_number">Order number:</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Cancelled</string>
    <string name="total">Total</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="item_name">Item name</string>
    <string name="qua">Qua.</string>
    <string name="time">Time</string>
    <string name="address">Address</string>

</resources>
